fix(business): adapt sbb-table-align-center class to use it with sort headers (#560)

--- a/src/angular-business/table/sort-header/sort-header.component.scss
+++ b/src/angular-business/table/sort-header/sort-header.component.scss
@@ -39,7 +39,8 @@ $sbb-sort-header-arrow-hint-opacity: 0.38;
   }
 }
 
-.sbb-col-center-align {
+.sbb-col-center-align,
+.sbb-table-align-center {
   .sbb-sort-header-button {
     text-align: center;
   }
